final changes to home page

--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
               decoding="async"
           /></a>
 
+          <h1 class="card-title pt-1 text-white align-content-center text-center pt-3">
+                MISAVENI HOLDINGS
+              </h1>
+
           <button
             class="navbar-toggler position-absolute end-0 top-50 translate-middle-y"
             type="button"
