Addition of contact us and about us section/pages missing contact us functionality

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           /></a>
 
           <h1 class="card-title pt-1 text-white align-content-center text-center pt-3">
-                MISAVENI HOLDINGS
+                 <a href="./index.html" class="text-white text-decoration-none icon-link-hover ">MISAVENI HOLDINGS</a> 
               </h1>
 
           <button
@@ -104,7 +104,7 @@
             <li class="nav-item active">
               <a class="nav-link" href="index.html">Home</a>
             </li>
-            <li><a class="nav-link" href="#">About us</a></li>
+            <li><a class="nav-link" href="./about.html">About us</a></li>
             <li><a class="nav-link" href="#">Services</a></li>
             <li><a class="nav-link" href="#">Contact us</a></li>
           </ul>
@@ -204,15 +204,14 @@
               <i class="bi bi-minecart-loaded service-icon"></i>
             </div>
             <div class="card-body text-center">
-              <h3 class="card-title pt-1">Mining & Industrial Supplies</h3>
+              <h3 class="card-title pt-1">Construction Solutions</h3>
               <p class="card-text text-sm">
-				<ul>
-					<li>Mining consumables(grease,oil, bolts, nuts,lubricants)</li>
-					<li>Industrial and slurry pumps</li>
-					<li>Hydraulicequipment and components</li>
-					<li>Tools and maintenance consumables</li>
-				</ul>
-                
+      <ul>
+        <li>Building materials and site consumables for mining towns</li>
+        <li>Civil works equipment, spares, and technical support</li>
+        <li>Infrastructure upgrades for active and legacy mining areas</li>
+        <li>Community housing and facilities refurbishment services</li>
+      </ul>
               </p>
               <span class="text-sm text-uppercase font-weight-bold"
                 >Learn More&nbsp;<i class="fe-icon-arrow-right"></i
@@ -538,14 +537,16 @@
                 <a href="#"><span class="fa fa-brands fa-linkedin"></span></a>
               </li>
             </ul>
+
+            
           </div>
 
           <div class="col-lg-8">
             <div class="row">
-              <div class="col-6 col-sm-6 col-md-3">
+              <div class="col-12 col-md-6 col-lg-6 col-xl-5">
                 <ul class="list-unstyled">
                   <li class="mb-2">
-                    <a style="color: white" href="#">About us</a>
+                    <a style="color: white" href="./about.html">About us</a>
                   </li>
                   <li class="mb-2">
                     <a style="color: white" href="#">Services</a>
@@ -555,6 +556,22 @@
                     <a style="color: white" href="#">Contact us</a>
                   </li>
                 </ul>
+              </div>
+              <div class="col-12 col-md-6 col-lg-6 col-xl-7">
+                <div class="footer-contact footer-contact-inline">
+                  <div class="footer-contact-item">
+                    <span class="footer-contact-icon"><span class="fa fa-envelope"></span></span>
+                    <a class="footer-contact-link" href="mailto:info@misaveniholdings.com">info@misaveniholdings.com</a>
+                  </div>
+                  <div class="footer-contact-item">
+                    <span class="footer-contact-icon"><span class="fa fa-phone"></span></span>
+                    <div class="footer-contact-details">
+                      <a class="footer-contact-link" href="tel:+27100651313">(010) 065-1313</a>
+                      <span class="footer-contact-divider">/</span>
+                      <a class="footer-contact-link" href="tel:+27745563902">074 556 3902</a>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
