First version of final view of website complete

--- a/about.html
+++ b/about.html
@@ -1,10 +1,3 @@
-<!-- /*
-* Bootstrap 5
-* Template Name: Furni
-* Template Author: Untree.co
-* Template URI: https://untree.co/
-* License: https://creativecommons.org/licenses/by/3.0/
-*/ -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -219,7 +212,7 @@
                 <figure class="text-center p-md-3 mb-0">
                   <img
                     class="img-fluid border-3"
-                    src="./images/CEO.png"
+                    src="./images/CEO.jpg"
                     alt="MISAVENI CEO"
                     title=""
                     loading="lazy"
@@ -383,11 +376,11 @@
                     <a style="color: white" href="./about.html">About us</a>
                   </li>
                   <li class="mb-2">
-                    <a style="color: white" href="#">Services</a>
+                    <a style="color: white" href="./services.html">Services</a>
                   </li>
 
                   <li class="mb-2">
-                    <a style="color: white" href="#">Contact us</a>
+                    <a style="color: white" href="./contact.html">Contact us</a>
                   </li>
                 </ul>
               </div>
@@ -400,7 +393,7 @@
                     <a
                       class="footer-contact-link"
                       href="mailto:info@misaveniholdings.com"
-                      >info@misaveniholdings.com</a
+                      >info@misaveniholdings.co.za</a
                     >
                   </div>
                   <div class="footer-contact-item">
