--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li><a class="nav-link" href="./about.html">About us</a></li>
-            <li><a class="nav-link" href="#">Services</a></li>
-            <li><a class="nav-link" href="#">Contact us</a></li>
+            <li><a class="nav-link" href="./services.html">Services</a></li>
+            <li><a class="nav-link" href="./contact.html">Contact us</a></li>
           </ul>
         </div>
       </div>
@@ -123,7 +123,7 @@
             that ensure our clients in the mining, industrial, and healthcare
             sectors receive the right products at the right time.
           </p>
-          <a class="btn btn-secondary" href="#">Find Out More</a>
+          <a class="btn btn-secondary" href="./about.html">Find Out More</a>
         </div>
       </div>
       <div
@@ -436,7 +436,7 @@
           <!-- Column !-->
           <div class="col-md-5">
             <!-- Image !-->
-            <figure class="text-center p-md-3 mb-0"><img class="img-fluid border-3" src="./images/CEO.png" alt="MISAVENI CEO" title="" loading="lazy" decoding="async"/></figure>
+            <figure class="text-center p-md-3 mb-0"><img class="img-fluid border-3" src="./images/CEO.jpg" alt="MISAVENI CEO" title="" loading="lazy" decoding="async"/></figure>
           </div>
           <!-- Column !-->
           <div class="col-md-6 offset-md-1">
@@ -549,11 +549,11 @@
                     <a style="color: white" href="./about.html">About us</a>
                   </li>
                   <li class="mb-2">
-                    <a style="color: white" href="#">Services</a>
+                    <a style="color: white" href="./services.html">Services</a>
                   </li>
                  
                   <li class="mb-2">
-                    <a style="color: white" href="#">Contact us</a>
+                    <a style="color: white" href="./contact.html">Contact us</a>
                   </li>
                 </ul>
               </div>
@@ -561,7 +561,7 @@
                 <div class="footer-contact footer-contact-inline">
                   <div class="footer-contact-item">
                     <span class="footer-contact-icon"><span class="fa fa-envelope"></span></span>
-                    <a class="footer-contact-link" href="mailto:info@misaveniholdings.com">info@misaveniholdings.com</a>
+                    <a class="footer-contact-link" href="mailto:info@misaveniholdings.com">info@misaveniholdings.co.za</a>
                   </div>
                   <div class="footer-contact-item">
                     <span class="footer-contact-icon"><span class="fa fa-phone"></span></span>
