--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,4 @@
-<!-- /*
-* Bootstrap 5
-* Template Name: Furni
-* Template Author: Untree.co
-* Template URI: https://untree.co/
-* License: https://creativecommons.org/licenses/by/3.0/
-*/ -->
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -204,11 +198,11 @@
                     <a style="color: white" href="./about.html">About us</a>
                   </li>
                   <li class="mb-2">
-                    <a style="color: white" href="#">Services</a>
+                    <a style="color: white" href="./services.html">Services</a>
                   </li>
                  
                   <li class="mb-2">
-                    <a style="color: white" href="#">Contact us</a>
+                    <a style="color: white" href="./contact.html">Contact us</a>
                   </li>
                 </ul>
               </div>
@@ -216,7 +210,7 @@
                 <div class="footer-contact footer-contact-inline">
                   <div class="footer-contact-item">
                     <span class="footer-contact-icon"><span class="fa fa-envelope"></span></span>
-                    <a class="footer-contact-link" href="mailto:info@misaveniholdings.com">info@misaveniholdings.com</a>
+                    <a class="footer-contact-link" href="mailto:info@misaveniholdings.com">info@misaveniholdings.co.za</a>
                   </div>
                   <div class="footer-contact-item">
                     <span class="footer-contact-icon"><span class="fa fa-phone"></span></span>
