make learn more ono index page active

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             </h2>
       <div class="row pt-5 mt-30">
         <div class="col-lg-4 col-sm-6 mb-30 pb-5">
-          <a class="card" href="#">
+          <a class="card" href="./services.html">
             <div
               class="box-shadow bg-white rounded-circle mx-auto text-center service-icon-ring"
             >
@@ -220,7 +220,7 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6 mb-30 pb-5">
-          <a class="card" href="#">
+          <a class="card" href="./services.html">
             <div
               class="box-shadow bg-white rounded-circle mx-auto text-center service-icon-ring"
             >
@@ -256,7 +256,7 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6 mb-30 pb-5">
-          <a class="card" href="#">
+          <a class="card" href="./services.html">
             <div
               class="box-shadow bg-white rounded-circle mx-auto text-center service-icon-ring"
             >
