--- a/about.html
+++ b/about.html
@@ -211,7 +211,7 @@
                 <!-- Image !-->
                 <figure class="text-center p-md-3 mb-0">
                   <img
-                    class="img-fluid border-3"
+                    class="img-fluid border-3 vision-portrait"
                     src="./images/CEO.jpg"
                     alt="MISAVENI CEO"
                     title=""
@@ -250,8 +250,10 @@
                   </div>
                   <div class="d-flex align-items-center gap-3 mt-4">
                     <div class="flex-grow-1">
-                      <h4 class="fs-5 fw-bold mb-1">Misaveni Holdings</h4>
-                      <span class="small text-muted">Vision Statement</span>
+                      <h4 class="fs-5 fw-bold mb-1">Raymond Mabunda</h4>
+                      <span class="small text-muted"
+                        >CEO, Misaveni Holdings</span
+                      >
                     </div>
                   </div>
                 </div>
@@ -266,7 +268,7 @@
               <div class="col-md-5 border-5">
                 <figure class="text-center p-md-3 mb-0">
                   <img
-                    class="img-fluid"
+                    class="img-fluid vision-portrait"
                     src="./images/LOGO_MH.jpg"
                     alt="Misaveni Holdings logo"
                     title="Misaveni Holdings"
