--- a/about.html
+++ b/about.html
@@ -218,6 +218,12 @@
                     loading="lazy"
                     decoding="async"
                   />
+                  <figcaption class="vision-caption">
+                    <span class="vision-caption-name">Raymond Mabunda</span>
+                    <span class="vision-caption-role"
+                      >CEO, Misaveni Holdings</span
+                    >
+                  </figcaption>
                 </figure>
               </div>
               <!-- Column !-->
@@ -248,14 +254,6 @@
                       growth.
                     </p>
                   </div>
-                  <div class="d-flex align-items-center gap-3 mt-4">
-                    <div class="flex-grow-1">
-                      <h4 class="fs-5 fw-bold mb-1">Raymond Mabunda</h4>
-                      <span class="small text-muted"
-                        >CEO, Misaveni Holdings</span
-                      >
-                    </div>
-                  </div>
                 </div>
               </div>
             </div>
@@ -275,6 +273,10 @@
                     loading="lazy"
                     decoding="async"
                   />
+                  <figcaption class="vision-caption">
+                    <span class="vision-caption-name">Misaveni Holdings</span>
+                    <span class="vision-caption-role">Mission Pillars</span>
+                  </figcaption>
                 </figure>
               </div>
               <!-- Column !-->
@@ -323,12 +325,6 @@
                         professionalism
                       </li>
                     </ul>
-                  </div>
-                  <div class="d-flex align-items-center gap-3 mt-4">
-                    <div class="flex-grow-1">
-                      <h4 class="fs-5 fw-bold mb-1">Misaveni Holdings</h4>
-                      <span class="small text-muted">Mission Pillars</span>
-                    </div>
                   </div>
                 </div>
               </div>
