--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
           <!-- Column !-->
           <div class="col-md-5">
             <!-- Image !-->
-            <figure class="text-center p-md-3 mb-0"><img class="img-fluid border-3 vision-portrait" src="./images/CEO.jpg" alt="MISAVENI CEO" title="" loading="lazy" decoding="async"/></figure>
+            <figure class="text-center p-md-3 mb-0"><img class="img-fluid border-3 vision-portrait" src="./images/CEO.jpg" alt="MISAVENI CEO" title="" loading="lazy" decoding="async"/><figcaption class="vision-caption"><span class="vision-caption-name">Raymond Mabunda</span><span class="vision-caption-role">CEO, Misaveni Holdings</span></figcaption></figure>
           </div>
           <!-- Column !-->
           <div class="col-md-6 offset-md-1">
@@ -453,12 +453,6 @@
                   sustainable industry growth.
                 </p>
               </div>
-              <div class="d-flex align-items-center gap-3 mt-4">
-                <div class="flex-grow-1">
-                  <h4 class="fs-5 fw-bold mb-1">Raymond Mabunda</h4>
-                  <span class="small text-muted">CEO, Misaveni Holdings</span>
-                </div>
-              </div>
             </div>
           </div>
         </div>
@@ -469,7 +463,7 @@
         <div class="row g-3 g-md-4 align-items-center">
           <!-- Column !-->
           <div class="col-md-5 border-5">
-            <figure class="text-center p-md-3 mb-0"><img class="img-fluid vision-portrait" src="./images/LOGO_MH.jpg" alt="Misaveni Holdings logo" title="Misaveni Holdings" loading="lazy" decoding="async"/></figure>
+            <figure class="text-center p-md-3 mb-0"><img class="img-fluid vision-portrait" src="./images/LOGO_MH.jpg" alt="Misaveni Holdings logo" title="Misaveni Holdings" loading="lazy" decoding="async"/><figcaption class="vision-caption"><span class="vision-caption-name">Misaveni Holdings</span><span class="vision-caption-role">Mission Pillars</span></figcaption></figure>
           </div>
           <!-- Column !-->
           <div class="col-md-6 offset-md-1">
@@ -491,12 +485,6 @@
                   <li>Supporting local economic development and youth empowerment</li>
                   <li>Operating with transparency, accountability, and professionalism</li>
                 </ul>
-              </div>
-              <div class="d-flex align-items-center gap-3 mt-4">
-                <div class="flex-grow-1">
-                  <h4 class="fs-5 fw-bold mb-1">Misaveni Holdings</h4>
-                  <span class="small text-muted">Mission Pillars</span>
-                </div>
               </div>
             </div>
           </div>
