working contact form

--- a/contact.html
+++ b/contact.html
@@ -112,9 +112,10 @@
                 </div>
               </div>
 
-              <form>
+              <form action="https://api.web3forms.com/submit" method="POST">
                 <div class="row">
                   <div class="col-6">
+					<input type="hidden" name="access_key" value="9a54dd3c-d3db-4a8d-940e-2b399f97bf3e">
                     <div class="form-group">
                       <label class="text-black" for="fname">First name</label>
                       <input type="text" class="form-control" id="fname">
