--- a/contact.html
+++ b/contact.html
@@ -116,26 +116,28 @@
                 <div class="row">
                   <div class="col-6">
 					<input type="hidden" name="access_key" value="9a54dd3c-d3db-4a8d-940e-2b399f97bf3e">
+					<input type="hidden" name="subject" value="Misaveni Holdings Contact Form" />
+					<input type="checkbox" name="botcheck" class="d-none" tabindex="-1" autocomplete="off" />
                     <div class="form-group">
                       <label class="text-black" for="fname">First name</label>
-                      <input type="text" class="form-control" id="fname">
+                      <input type="text" class="form-control" id="fname" name="firstname" placeholder="John" required>
                     </div>
                   </div>
                   <div class="col-6">
                     <div class="form-group">
                       <label class="text-black" for="lname">Last name</label>
-                      <input type="text" class="form-control" id="lname">
+                      <input type="text" class="form-control" id="lname" name="lastname" placeholder="Doe" required>
                     </div>
                   </div>
                 </div>
                 <div class="form-group">
                   <label class="text-black" for="email">Email address</label>
-                  <input type="email" class="form-control" id="email">
+                  <input type="email" class="form-control" id="email" name="email" placeholder="you@example.com" required>
                 </div>
 
                 <div class="form-group mb-5">
                   <label class="text-black" for="message">Message</label>
-                  <textarea name="" class="form-control" id="message" cols="30" rows="5"></textarea>
+                  <textarea name="message" class="form-control" id="message" cols="30" rows="5" placeholder="How can we help you?" required></textarea>
                 </div>
 
                 <button type="submit" class="btn btn-secondary text-white">Send Message</button>
