fix working contact form

--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
                 </div>
               </div>
 
-              <form action="https://api.web3forms.com/submit" method="POST">
+              <form id="contact-form" action="https://api.web3forms.com/submit" method="POST">
                 <div class="row">
                   <div class="col-6">
 					<input type="hidden" name="access_key" value="9a54dd3c-d3db-4a8d-940e-2b399f97bf3e">
@@ -141,6 +141,7 @@
                 </div>
 
                 <button type="submit" class="btn btn-secondary text-white">Send Message</button>
+                <div class="form-status small mt-3" data-form-status role="alert" aria-live="polite"></div>
               </form>
 
             </div>
