Addition of subject line in contact form

--- a/contact.html
+++ b/contact.html
@@ -134,6 +134,11 @@
                   <input type="email" class="form-control" id="email" name="email" placeholder="you@example.com" required>
                 </div>
 
+				<div class="form-group">
+                  <label class="text-black" for="Subject">Subject</label>
+                  <input type="text" class="form-control" id="subject" name="subject" placeholder="Contact Us" required>
+                </div>
+
                 <div class="form-group mb-5">
                   <label class="text-black" for="message">Message</label>
                   <textarea name="message" class="form-control" id="message" cols="30" rows="5" placeholder="How can we help you?" required></textarea>
